Fix Left SideNav being overlapped by navbar

--- a/app/styles/less/component.less
+++ b/app/styles/less/component.less
@@ -39,3 +39,7 @@ md-tabs.md-default-theme md-ink-bar, md-tabs md-ink-bar {
 md-content.md-default-theme, md-content {
   background-color: #FAFAFA !important;
 }
+
+@media screen and (max-width: 768px) {
+  .md-sidenav-left { padding-top: 50px; }
+}
